--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -14,8 +14,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install deps
-        run: brew install gcc@10
-        run: brew install cmake
+        run: |
+             brew install gcc@10
+             brew install cmake
       - name: Configure serial
         run: |
              mkdir build
