--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install deps
         run: |
-             brew install gcc@10
-             brew install cmake
+             brew install gcc
+             brew install gfortran
       - name: Configure serial
         run: |
              mkdir build
