--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -15,13 +15,13 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install deps
         run: |
-             brew install gcc@10
-             brew install --cask gfortran
+             brew install gcc@13
+             brew install gfortran
       - name: Configure serial
         run: |
              mkdir build
              cd build
-             cmake .. -DCOMPILER=AUTO -DCMAKE_INSTALL_PREFIX=$(pwd)/../install
+             CC=gcc-13 CXX=g++-13 FC=gfortran-13 cmake .. -DCOMPILER=AUTO -DCMAKE_INSTALL_PREFIX=$(pwd)/../install
       - name: Build serial
         run: |
              cd build
