--- a/.github/workflows/osx-mpi.yml
+++ b/.github/workflows/osx-mpi.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
              mkdir build
              cd build
+             echo "OMPI_MPIF90=gfortran-13" >> $GITHUB_ENV
              FC=mpifort cmake .. -DMPI=TRUE -DCOMPILER=AUTO -DCMAKE_INSTALL_PREFIX=$(pwd)/../install
       - name: Build serial
         run: |
