--- a/.github/workflows/osx-mpi.yml
+++ b/.github/workflows/osx-mpi.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
              mkdir build
              cd build
+             which gfortran-13
              FC=mpif90 cmake .. -DMPI=TRUE -DCOMPILER=AUTO -DCMAKE_INSTALL_PREFIX=$(pwd)/../install
       - name: Build serial
         run: |
