--- a/.github/workflows/serial-intel.yml
+++ b/.github/workflows/serial-intel.yml
@@ -15,9 +15,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install deps
         run: |
+             curl -fsSL https://repositories.intel.com/graphics/intel-graphics.key | sudo apt-key add -
+             sudo add-apt-repository "deb https://repositories.intel.com/graphics/ubuntu focal main"
              sudo apt-get update
              sudo apt-get -y install cmake
-             sudo apt-get -y install intel-basekit intel-hpckit
+             sudo apt-get install -y intel-oneapi-compiler-dpcpp-cpp-and-cpp-classic intel-oneapi-compiler-fortran intel-oneapi-mpi
              echo "source /opt/intel/oneapi/setvars.sh" >> $GITHUB_ENV
              sudo apt-get -y install openmpi-bin openmpi-common libopenmpi-dev
       - name: Configure serial
