--- a/.github/workflows/serial-intel.yml
+++ b/.github/workflows/serial-intel.yml
@@ -15,11 +15,12 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install deps
         run: |
-             curl -fsSL https://repositories.intel.com/graphics/intel-graphics.key | sudo apt-key add -
-             sudo add-apt-repository "deb https://repositories.intel.com/graphics/ubuntu focal main"
              sudo apt-get update
+             sudo apt-get install -y wget build-essential software-properties-common lsb-release
+             curl -fsSL https://registrationcenter-download.intel.com/akdlm/irc_nas/18209/l_HPCKit_p_2022.1.0.223_offline.sh -o l_HPCKit_p_2022.1.0.223_offline.sh
+             chmod +x l_HPCKit_p_2022.1.0.223_offline.sh
+             sudo ./l_HPCKit_p_2022.1.0.223_offline.sh -s -a -s --eula accept --install-dir /opt/intel/oneapi
              sudo apt-get -y install cmake
-             sudo apt-get install -y intel-oneapi-compiler-dpcpp-cpp-and-cpp-classic intel-oneapi-compiler-fortran intel-oneapi-mpi
              echo "source /opt/intel/oneapi/setvars.sh" >> $GITHUB_ENV
              sudo apt-get -y install openmpi-bin openmpi-common libopenmpi-dev
       - name: Configure serial
