--- a/.github/workflows/mpi.yml
+++ b/.github/workflows/mpi.yml
@@ -1,9 +1,9 @@
 name: MPI Build
 
 on:
-  push:
-    paths-ignore:
-      - '**.md'
+  #push:
+  #  paths-ignore:
+  #    - '**.md'
   pull_request:
     paths-ignore:
       - '**.md'
