enabled dispatch on push for intel serial

--- a/.github/workflows/serial.yml
+++ b/.github/workflows/serial.yml
@@ -1,9 +1,9 @@
 name: Serial Build
 
 on:
-  push:
-    paths-ignore:
-      - '**.md'
+  #push:
+  #  paths-ignore:
+  #   - '**.md'
   pull_request:
     paths-ignore:
       - '**.md'
