--- a/.github/workflows/serial-intel.yml
+++ b/.github/workflows/serial-intel.yml
@@ -17,8 +17,8 @@ jobs:
         run: |
              sudo apt-get update
              sudo apt-get install -y wget build-essential software-properties-common lsb-release
-             wget https://registrationcenter-download.intel.com/akdlm/IRC_NAS/163da6e4-56eb-4948-aba3-debcec61c064/l_BaseKit_p_2024.0.1.46_offline.sh
-             sudo sh ./l_BaseKit_p_2024.0.1.46_offline.sh -s -a -s --eula accept --install-dir /opt/intel/oneapi
+             wget https://registrationcenter-download.intel.com/akdlm/IRC_NAS/67c08c98-f311-4068-8b85-15d79c4f277a/l_HPCKit_p_2024.0.1.38_offline.sh
+             sudo sh ./l_HPCKit_p_2024.0.1.38_offline.sh -s -a -s --eula accept --install-dir /opt/intel/oneapi
              sudo apt-get -y install cmake
              echo "source /opt/intel/oneapi/setvars.sh" >> $GITHUB_ENV
              sudo apt-get -y install openmpi-bin openmpi-common libopenmpi-dev
