trying to install intel compilers using spack

--- a/.github/workflows/serial-intel.yml
+++ b/.github/workflows/serial-intel.yml
@@ -16,13 +16,13 @@ jobs:
       - name: Install deps
         run: |
              sudo apt-get update
-             sudo apt-get install -y wget build-essential software-properties-common lsb-release
-             wget https://registrationcenter-download.intel.com/akdlm/IRC_NAS/67c08c98-f311-4068-8b85-15d79c4f277a/l_HPCKit_p_2024.0.1.38_offline.sh
-             sudo sh ./l_HPCKit_p_2024.0.1.38_offline.sh -s -a -s --eula accept --install-dir /opt/intel/oneapi
              sudo apt-get -y install cmake
-             . /opt/intel/oneapi/setvars.sh
-             rm -f ./l_HPCKit_p_2024.0.1.38_offline.sh
-             sudo apt-get -y install openmpi-bin openmpi-common libopenmpi-dev
+             git clone https://github.com/spack/spack.git ~/spack
+             . ~/spack/share/spack/setup-env.sh
+             spack install intel-oneapi-compilers intel-oneapi-mkl intel-oneapi-mpi
+             spack load intel-oneapi-compilers intel-oneapi-mkl intel-oneapi-mpi
+             spack compiler find
+             spack compilers
              mkdir build
              cd build
              cmake .. -DCOMPILER=INTEL -DENABLEF=TRUE -DCMAKE_INSTALL_PREFIX=$(pwd)/../install
